<?xml version="1.0"?>
<package format="3">
  <name>wpi_jaco_wrapper</name>
  <version>0.0.25</version>
  <description>ROS Wrapper for the JACO Arm Developed at WPI</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/wpi_jaco_wrapper</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/wpi_jaco/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/wpi_jaco</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>ecl_geometry</depend>
  <depend>hardware_interface</depend>
  <depend>wpi_jaco_msgs</depend>
  <depend>rclcpp</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
